fix: adjust spacing for mobile and tablet view

--- a/src/app/addons/features/addon/addon.component.scss
+++ b/src/app/addons/features/addon/addon.component.scss
@@ -1,6 +1,6 @@
-$gap: 3rem;
+$gap: 2rem;
 $borderRadius: 8px;
-$checkboxScale: 2;
+$checkboxScale: 1.8;
 
 .addon {
   display: flex;
