--- a/src/app/personal-info/features/input-text/input-text.component.scss
+++ b/src/app/personal-info/features/input-text/input-text.component.scss
@@ -8,7 +8,6 @@ $gap: 0.7rem;
   .info {
     display: flex;
     justify-content: space-between;
-    font-size: 1.2em;
 
     .error {
       font-weight: var(--font-weight-medium);
@@ -18,7 +17,7 @@ $gap: 0.7rem;
 
   input {
     width: 100%;
-    padding: 2rem;
+    padding: 1.5rem;
     font-size: var(--font-size-text);
     border-radius: var(--card-border-radius);
     border: none;
@@ -32,6 +31,18 @@ $gap: 0.7rem;
     &.invalid {
       outline-color: var(--color-primary-strawberry-red);
       outline-width: 2px;
+    }
+  }
+}
+
+@media screen and (min-width: 1125px) {
+  .wrapper {
+    .info {
+      font-size: 1.2em;
+    }
+
+    input {
+      padding: 2rem;
     }
   }
 }
