--- a/src/app/personal-info/personal-info.component.scss
+++ b/src/app/personal-info/personal-info.component.scss
@@ -1,5 +1,3 @@
-$gap: 2.5rem;
-
 :host {
   display: flex;
   flex-direction: column;
@@ -7,9 +5,17 @@ $gap: 2.5rem;
 }
 
 .personal-info {
+  --gap: 1.5rem;
+
   &__form {
     display: flex;
     flex-direction: column;
-    gap: $gap;
+    gap: var(--gap);
+  }
+}
+
+@media screen and (min-width: 875px) {
+  .personal-info {
+    --gap: 2.5rem;
   }
 }
