--- a/src/app/select-plan/features/frequency-selector/frequency-selector.component.scss
+++ b/src/app/select-plan/features/frequency-selector/frequency-selector.component.scss
@@ -1,4 +1,3 @@
-$gap: 4rem;
 $switchInicatorScale: 1.5;
 $switchInicatorSize: 1.7rem;
 $switchInicatorPadding: 0.36rem;
@@ -7,11 +6,13 @@ $switchWidth: ($switchInicatorScale + 1) * $switchInicatorSize + 2 *
   $switchInicatorPadding;
 
 .wrapper {
+  --gap: 2.6rem;
+
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: $gap;
+  gap: var(--gap);
 
   border-radius: 8px;
   color: var(--color-neutral-cool-gray);
@@ -21,7 +22,7 @@ $switchWidth: ($switchInicatorScale + 1) * $switchInicatorSize + 2 *
     color: inherit;
     font-family: inherit;
     cursor: pointer;
-    padding: calc(0.5 * $gap);
+    padding: calc(0.5 * var(--gap));
     font-weight: var(--font-weight-bold);
 
     &.active {
@@ -50,5 +51,11 @@ $switchWidth: ($switchInicatorScale + 1) * $switchInicatorSize + 2 *
         transform: translateX($switchInicatorScale * 100%);
       }
     }
+  }
+}
+
+@media screen and (min-width: 875px) {
+  .wrapper {
+    --gap: 4rem;
   }
 }
